# mofa

./: .aider.conf.yml  .env  .env.example  .env.test  .gitignore  .opencode.md  .pre-commit-config.yaml  .typos.toml  .windsurfrules  AGENT.md  APP_DEVELOPMENT_GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HISTORY.rst  INSTRUCTIONS.md  PR_DESCRIPTION.md  PR_DESCRIPTION_CIRCUIT_BREAKER.md  PR_DESCRIPTION_LINUX_BACKEND.md  PR_DESCRIPTION_PHASE1.md  PR_DESCRIPTION_PHASE1_2_COMBINED.md  PR_DESCRIPTION_PHASE2.md  PR_DESCRIPTION_PHASE3.md  PR_DESCRIPTION_PROFILER_PHASE1.md  PR_DESCRIPTION_REPLAY_PHASE2.md  PR_DESCRIPTION_ROUTING.md  PR_DESCRIPTION_SCHEDULER.md  PR_DESCRIPTION_VALIDATION_MIDDLEWARE.md  PR_DESCRIPTION_WORKFLOW_VISUALIZATION.md  Pull Request: Fix axum v0.8 Route Syntax Panic & WebSocket Dead Handler  README.md  README_cn.md  README_en.md  SECURITY.md  SWARM_PR.md  build_errors.txt  build_errors_utf8.txt  build_output.txt  check_runtime.txt  (+69 more)
agents/news-processor/: README.md  pyproject.toml
agents/news-processor/news_processor/: __init__.py  main.py
agents/rss-input/: README.md  pyproject.toml
agents/rss-input/rss_input/: __init__.py  main.py
agents/script-generator/: README.md  pyproject.toml
agents/script-generator/script_generator/: __init__.py  main.py
crates/mofa-bench/: Cargo.toml
crates/mofa-bench/benches/: agent_messages.rs  agent_state.rs  agent_types.rs  message_bus.rs
crates/mofa-bench/src/: lib.rs  mock_llm.rs  utils.rs
crates/mofa-cli/: Cargo.toml  README.md
crates/mofa-cli/_Users_LENOVO_AppData_Local_Temp_.tmpqa7ejd_source-plugin/: plugin.toml
crates/mofa-cli/src/: cli.rs  context.rs  error.rs  lib.rs  main.rs  plugin_catalog.rs  store.rs
crates/mofa-cli/tests/: agent_integration_tests.rs  doctor_integration_tests.rs  new_commands.rs  swarm_integration_tests.rs  test_dsl_integration_tests.rs
crates/mofa-extra/: Cargo.toml  README.md
crates/mofa-extra/src/: lib.rs
crates/mofa-ffi/: Cargo.toml  README.md  build.rs  generate-bindings.sh
crates/mofa-ffi/src/: error.rs  lib.rs  mofa.udl  python_bindings.rs  swarm.rs  test_thread_safety.rs  uniffi_bindings.rs
crates/mofa-foundation/: Cargo.toml  README.md  out.txt  out_utf8.txt  out_utf82.txt
crates/mofa-foundation/benches/: context_compression.rs
crates/mofa-foundation/examples/: agent_tracing.rs  memory_history_search.rs  qwen_gguf_infer.rs  telemetry_demo.rs  test_graph_serialize.rs  workflow_versioning.rs
crates/mofa-foundation/src/: agent_executor.rs  capability_registry.rs  config.rs  error_conversions.rs  hardware.rs  inference_backend.rs  lib.rs  model_pool.rs  orchestrator.rs  recovery.rs  routing.rs  schema_validator.rs  security.rs  speech_registry.rs  voice_pipeline.rs
crates/mofa-foundation/tests/: bm25_retrieval.rs  hitl_integration.rs  inference_e2e.rs  mcp_integration.rs  ollama_provider_integration.rs  (+13 more)
crates/mofa-gateway/: CRATE_OVERVIEW.md  Cargo.toml  PROXY.md  gateway.example.toml
crates/mofa-integrations/: Cargo.toml
crates/mofa-kernel/: Cargo.toml  README.md
crates/mofa-local-llm/: Cargo.toml
crates/mofa-macros/: Cargo.toml  README.md
crates/mofa-monitoring/: Cargo.toml  README.md
crates/mofa-observatory/: Cargo.toml  README.md  demo.sh
crates/mofa-orchestrator/: Cargo.toml  README.md
crates/mofa-plugins/: Cargo.toml  README.md
crates/mofa-runtime/: Cargo.toml  README.md
crates/mofa-sdk/: Cargo.toml  README.md  build.rs  generate-bindings.sh  sequential-leaping-taco.md
crates/mofa-smith/: Cargo.toml  README.md
examples/adaptive_collaboration_agent/: Cargo.toml
examples/admission_gate_demo/: Cargo.toml
examples/agent_budget_management/: Cargo.toml
examples/agent_builder/: Cargo.toml
examples/agent_from_database_streaming/: Cargo.toml  README.md
examples/agent_memory/: Cargo.toml
examples/agent_with_plugins_and_rhai/: Cargo.toml  README.md
examples/behavior_diff_runtime_example/: Cargo.toml
tests/: Cargo.toml  concurrency_tests.rs  test_ai_conn.py  test_hello_world.yml  test_init_command.py  test_multi_param.yml  test_run_flow_cleanup.py  test_search_commands.py  test_vibe_api_key_path.py  test_vibe_flow_command.py
tests/examples/: bootstrap_agent.toml  record_case_gpt_oss_120b.toml  simple_agent.toml  simple_agent_llama_record.toml  simple_agent_tape.toml  tool_agent.toml
tests/fixtures/: simple_agent.tape.json  simple_agent_recorded.tape.json
tests/gui/: Cargo.toml  index.html
tests/memory/: test_memory_manager.py
tests/runtime/: __init__.py  test_execution_planner.py  test_execution_retry_policy.py  test_fixture_catalog_snapshots.py  test_run_flow_validation_integration.py  test_runtime_fixtures.py  test_schema_flow.py  test_schema_migration.py  test_validation_pipeline.py  test_validation_rules.py
tests/src/: agent_runner.rs  artifact.rs  assertions.rs  backend.rs  behavior_diff.rs  bus.rs  case.rs  clock.rs  concurrency.rs  dsl.rs  fixtures.rs  golden.rs  hitl.rs  lib.rs  live_llm.rs  llm_provider.rs  memory.rs  mock_llm_server.rs  parameterized.rs  regression.rs  replay.rs  result.rs  runner.rs  semantic.rs  suite.rs  swarm.rs  tools.rs
tests/tests/: accessor_helpers_tests.rs  adversarial_ci_gate_tests.rs  adversarial_suite_tests.rs  agent_runner_tests.rs  allure_tests.rs  artifact_assertions_tests.rs  artifact_tests.rs  assertion_macro_tests.rs  assertions.rs  async_runner_tests.rs  backend_usage_tests.rs  behavior_diff_tests.rs  benchmark_harness_tests.rs  bus_filter_tests.rs  bus_sequence_expectation_tests.rs  clock_timeout_tests.rs  contract_gateway_tests.rs  contract_local_inference_tests.rs  dsl_tests.rs  examples_compile.rs  examples_dsl_regression.rs  examples_runtime.rs  failure_injection_tests.rs  fixture_loader_tests.rs  golden_tests.rs  hitl_harness_tests.rs  infer_tracking_tests.rs  integration.rs  judge_tests.rs  junit_tests.rs  llm_provider_tests.rs  memory_drift_tests.rs  mock_llm_server_tests.rs  parameterized_tests.rs  react_hot_reload.rs  report_merge_tests.rs  report_tests.rs  scenario_runner_tests.rs  security_report_formatter_tests.rs  semantic_tests.rs  (+2 more)
(+1921 files in other folders)
