[workspace]
resolver = "3"
members = [
    "crates/mofa-monitoring",
    "crates/mofa-kernel",
    "crates/mofa-foundation",
    "crates/mofa-runtime",
    "crates/mofa-cli",
    "crates/mofa-plugins",
    "crates/mofa-macros",
    "crates/mofa-sdk",
    "crates/mofa-ffi",
    "crates/mofa-extra",
    "crates/mofa-gateway",
    "crates/mofa-smith",
]
exclude = ["examples"]
[workspace.lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused = "allow"
unexpected_cfgs = "allow"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["MoFA Contributors <contributors@mofa.org>"]
license = "Apache-2.0"
repository = "https://github.com/mofa-org/mofa"
homepage = "https://github.com/mofa-org/mofa"

[workspace.dependencies]
async-trait = "0.1"
# axum 0.8+ required — uses {param} route syntax (not :param)
axum = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
tokio = { version = "1", features = ["full", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
base64 = "0.22"
error-stack = "0.6.0"
futures = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"
dashmap = "5.5"
eyre = "0.6"
flume = "0.10"

# Hot-reload support
notify = { version = "6.1", features = ["serde"] }
libloading = "0.8"
sha2 = "0.10"
tempfile = "3.8"

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
lazy_static = "1.4"

# Actor framework for ReAct agents
ractor = "0"

# Configuration file support (multi-format)
config = { version = "0.14", features = [
    "toml",
    "json",
    "yaml",
    "ini",
    "ron",
    "json5",
] }
regex = "1"
