[package]
name = "mofa-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Testing utilities for the MoFA agent framework: mocks, concurrency tests, deadlock detection"

[dependencies]
mofa-kernel = { path = "../crates/mofa-kernel" }
mofa-foundation = { path = "../crates/mofa-foundation" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
tracing = { workspace = true }
