[package]
name = "mofa-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Testing utilities for the MoFA agent framework"

[dependencies]
mofa-kernel = { path = "../crates/mofa-kernel" }
mofa-foundation = { path = "../crates/mofa-foundation" }
mofa-runtime = { path = "../crates/mofa-runtime" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

[dev-dependencies]
axum = { workspace = true }
