[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "script-generator"
version = "0.1.0"
description = "LLM-based script generator agent for MoFA dataflow - generates multi-persona news scripts"
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "numpy<2.0.0",
    "pyarrow>=5.0.0",
    "mofa-core",
    "dora-rs",
    "openai>=1.0.0",
    "python-dotenv",
]

[project.scripts]
script-generator = "script_generator.main:main"

[tool.setuptools.packages.find]
include = ["script_generator*"]
