[package]
name = "mofa-cli"
version.workspace = true
edition.workspace = true
description = "MoFA CLI - Command-line tool for building and managing AI agents"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mofa-cli"
readme = "README.md"
keywords = ["ai", "agent", "cli", "scaffolding", "code-generation"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[[bin]]
name = "mofa"
path = "src/main.rs"

[dependencies]
# Core
mofa-sdk = { path = "../mofa-sdk", version = "0.1" }
mofa-kernel = { path = "../mofa-kernel", version = "0.1", features = [
    "config",
] }
mofa-runtime = { path = "../mofa-runtime", version = "0.1" }
mofa-foundation = { path = "../mofa-foundation", version = "0.1" }
config.workspace = true
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"


# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI enhancements
dialoguer = "0.11"
indicatif = "0.17"
comfy-table = "7"
dirs-next = "2"

# Process management
nix = { version = "0.29", features = ["process", "signal"] }

# Plugin installation
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
flate2 = "1.0"
tar = "0.4"
zip = "2.1"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"

# Database (optional, for db init command)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
], optional = true }

# TUI (Terminal User Interface)
ratatui = { version = "0.30", features = [
    "scrolling-regions",
    "unstable-backend-writer",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
crossterm = { version = "0.29", features = ["bracketed-paste", "event-stream"] }
tokio-stream = "0.1"

[dev-dependencies]
anyhow.workspace = true
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[features]
default = []
dora = ["mofa-sdk/dora"]
db = ["dep:sqlx"]

[lints]
workspace = true
