[package]
name = "mofa-extra"
version.workspace = true
edition.workspace = true
description = "MoFA Extra modules including Rhai scripting support"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mofa-extra"
readme = "README.md"
keywords = ["ai", "agent", "utilities", "extensions", "scripting"]
categories = ["development-tools"]
publish = true

[features]
default = ["rhai-scripting"]
rhai-scripting = ["rhai", "regex"]

[dependencies]
# Rhai scripting engine
rhai = { version = "1.20", features = ["sync", "serde"], optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }
regex = { version = "1.10", optional = true }

[lints]
workspace = true
