[package]
name = "mofa-foundation"
version.workspace = true
edition.workspace = true
description = "MoFA Foundation - Core building blocks and utilities"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mofa-foundation"
readme = "README.md"
keywords = ["ai", "agent", "llm", "persistence", "storage"]
categories = ["development-tools", "asynchronous"]
publish = true

[features]
default = []
# Enable PostgreSQL persistence backend
persistence-postgres = ["dep:sqlx"]
# Enable MySQL/MariaDB persistence backend
persistence-mysql = ["dep:sqlx"]
# Enable SQLite persistence backend
persistence-sqlite = ["dep:sqlx"]
# Enable all database backends
persistence-all = [
    "persistence-postgres",
    "persistence-mysql",
    "persistence-sqlite",
]
# Enable Kokoro TTS support
kokoro = ["mofa-plugins/kokoro"]
# Enable MCP (Model Context Protocol) client support
mcp = ["dep:rmcp"]
# Enable Qdrant vector database support
qdrant = ["dep:qdrant-client"]
# Enable Linux Candle on-device ML inference (Hugging Face Candle)
linux-candle = ["dep:candle-core", "dep:candle-transformers"]

[dependencies]
# Workspace dependencies
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream = { workspace = true }
tracing.workspace = true
rand.workspace = true
# YAML config parsing
serde_yaml = "0.9"

# HTTP client (transcription + HTTP providers)
reqwest = { version = "0.12", features = [
    "multipart",
    "json",
    "gzip",
    "brotli",
    "deflate",
] }

# Config parsing (multi-format)
config.workspace = true

# Regex for prompt template parsing
regex = "1.11"

# TOML parsing for DSL
toml = "0.8"

# OpenAI / compatible APIs
async-openai = { version = "0.27" }

# Actor framework for ReAct agents
ractor.workspace = true

# MCP (Model Context Protocol) client support
rmcp = { version = "0.16", features = [
    "client",
    "transport-child-process",
    "transport-io",
], optional = true }

# Datetime support for persistence
chrono.workspace = true

# Database support (optional)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    "uuid",
    "chrono",
    "json",
], optional = true }

# Local dependencies
mofa-kernel = { path = "../mofa-kernel", version = "0.1", features = [
    "config",
] }
mofa-extra = { path = "../mofa-extra", version = "0.1" }
mofa-plugins = { path = "../mofa-plugins", version = "0.1" }
once_cell = "1.21.3"
rhai = { version = "1", features = ["sync", "serde"] }
lazy_static = "1.4"

# Qdrant vector database client (optional)
qdrant-client = { version = "1.17", optional = true }

# Image encoding and MIME detection
base64 = "0.22"
infer = "0.16"


# System information for memory monitoring
sysinfo = "0.31"

# Candle ML framework for on-device inference (Linux only, optional)
# Enable with: features = ["linux-candle"]
candle-core = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
