[package]
name = "mofa-foundation"
version.workspace = true
edition.workspace = true
description = "MoFA Foundation - Core building blocks and utilities"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mofa-foundation"
readme = "README.md"
keywords = ["ai", "agent", "llm", "persistence", "storage"]
categories = ["development-tools", "asynchronous"]
publish = true

[features]
default = []
# Enable PostgreSQL persistence backend
persistence-postgres = ["dep:sqlx"]
# Enable MySQL/MariaDB persistence backend
persistence-mysql = ["dep:sqlx"]
# Enable SQLite persistence backend
persistence-sqlite = ["dep:sqlx"]
# Enable all database backends
persistence-all = [
    "persistence-postgres",
    "persistence-mysql",
    "persistence-sqlite",
]
# Enable Kokoro TTS support
kokoro = ["mofa-plugins/kokoro"]
# Enable MCP (Model Context Protocol) client support
mcp = ["dep:rmcp"]
# Enable Qdrant vector database support
qdrant = ["dep:qdrant-client"]
# Enable accurate token counting with tiktoken
tiktoken = ["dep:tiktoken-rs"]
# Enable parallel processing for compression
parallel-compression = ["dep:rayon"]
# Enable compression caching for embeddings and summaries
# Note: sha2 is already included as a non-optional dependency for security features
compression-cache = []
# Enable Linux Candle on-device ML inference (Hugging Face Candle)
linux-candle = ["dep:candle-core", "dep:candle-transformers"]
# Enable HTTP API endpoints for HITL (requires axum)
http-api = ["dep:axum"]
# Enable scheduler telemetry (Prometheus metrics)
scheduler-telemetry = ["dep:metrics"]


[dependencies]
# Workspace dependencies
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
error-stack = { workspace = true }
tokio.workspace = true
futures.workspace = true
tokio-stream = { workspace = true }
tracing.workspace = true
rand.workspace = true
# YAML config parsing
serde_yaml = "0.9"


# HTTP client (transcription + HTTP providers)
reqwest = { workspace = true, features = [
    "multipart",
    "json",
    "gzip",
    "brotli",
    "deflate",
] }

# HTTP server (for HITL API - optional)
axum = { workspace = true, optional = true }

# Config parsing (multi-format)
config.workspace = true

# Regex for prompt template parsing
regex = "1.11"

# TOML parsing for DSL
toml = "1.0"

# OpenAI / compatible APIs
async-openai = { version = "0.34" }

# Actor framework for ReAct agents
ractor.workspace = true

# MCP (Model Context Protocol) client support
rmcp = { version = "1.3", features = [
    "client",
    "transport-child-process",
    "transport-io",
], optional = true }

# Datetime support for persistence
chrono.workspace = true

# Database support (optional)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    "uuid",
    "chrono",
    "json",
], optional = true }

# Local dependencies
mofa-kernel = { path = "../mofa-kernel", version = "0.1", features = [
    "config",
] }
mofa-extra = { path = "../mofa-extra", version = "0.1" }
mofa-plugins = { path = "../mofa-plugins", version = "0.1" }
once_cell = "1.21.4"

# Graph data structures for task DAGs (Swarm Orchestrator)
petgraph = { version = "0.8", features = ["serde-1"] }
dashmap = { workspace = true }
rhai = { version = "1", features = ["sync", "serde"] }
lazy_static = "1.4"

# Qdrant vector database client (optional)
qdrant-client = { version = "1.17", optional = true }

# Image encoding and MIME detection
base64 = "0.22"
infer = "0.19"

# Security: PII redaction (hashing)
sha2 = "0.11"
hex = "0.4"
# JSON Schema validation for structured output
jsonschema = { version = "0.45", default-features = false }


# System information for memory monitoring
sysinfo = "0.36"

# Accurate token counting for context compression
tiktoken-rs = { version = "0.9", optional = true }

# Parallel processing for compression algorithms
rayon = { version = "1.8", optional = true }

# Parking lot for efficient in-memory locks
parking_lot.workspace = true

# Candle ML framework for on-device inference (Linux only, optional)
# Enable with: features = ["linux-candle"]
candle-core = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }

# Cron expression parsing for scheduled agent execution
cron.workspace = true

# Prometheus metrics (optional)
metrics = { version = "0.24", optional = true }

[lints]
workspace = true

[dev-dependencies]
# bring in proc macro to satisfy downstream crates during all-features build
num_enum_derive = "0.7"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "context_compression"
harness = false
