[package]
name = "mofa-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MoFA Cognitive Gateway — runtime implementation (Task 12)"

[dependencies]
mofa-kernel = { path = "../mofa-kernel" }

# HTTP server & middleware
axum.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }

# Async runtime
tokio.workspace = true

# HTTP client (LLM backend proxy)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging & tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Async traits
async-trait.workspace = true

# UUID for request-ID generation
uuid.workspace = true

[lints]
workspace = true
