[package]
name = "mofa-local-llm"
version.workspace = true
edition.workspace = true
description = "MoFA Linux inference backend with CUDA, ROCm, and Vulkan hardware detection"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ai", "inference", "llm", "cuda", "rocm"]
categories = ["science", "hardware-support"]
publish = true

[features]
default = []
# Enable CUDA backend (NVIDIA GPUs)
cuda = []
# Enable ROCm backend (AMD GPUs)
rocm = []
# Enable Vulkan compute backend (cross-vendor fallback)
vulkan = []
# Enable Candle inference engine (Linux only)
candle = ["dep:candle-core", "dep:candle-transformers", "dep:tokenizers"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true

# System information for hardware detection and memory monitoring
sysinfo = "0.31"

# Candle for ML inference (Rust-native) - Optional for Linux-only builds
candle-core = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }

# Tokenization - Optional for Linux-only builds
tokenizers = { version = "0.22", optional = true }

mofa-foundation = { path = "../mofa-foundation", version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
structopt = "0.3"
tracing-subscriber = "0.3"
anyhow = "1.0"

[[bench]]
name = "inference_throughput"
harness = false
